--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mi-primera-pagina",
   "version": "0.1.0",
+  "homepage": "https://TU-USUARIO.github.io/mi-react-app",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -16,6 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
